refactor : refactor entry point and router file structure

--- a/public/404.html
+++ b/public/404.html
@@ -8,7 +8,7 @@
       // MIT License
       // https://github.com/rafgraph/spa-github-pages
       // This script takes the current url and converts the path and query
-      // string into just a query string, and then redirects the browser
+      // string into just a query string, and then redirects the browser.old
       // to the new url with only a query string and hash fragment,
       // e.g. https://www.foo.tld/one/two?a=b&c=d#qwe, becomes
       // https://www.foo.tld/?/one/two&a=b~and~c=d#qwe
