--- a/public/index.html
+++ b/public/index.html
@@ -33,10 +33,10 @@
       // https://github.com/rafgraph/spa-github-pages
       // This script checks to see if a redirect is present in the query string,
       // converts it back into the correct url and adds it to the
-      // browser's history using window.history.replaceState(...),
-      // which won't cause the browser to attempt to load the new url.
+      // browser.old's history using window.history.replaceState(...),
+      // which won't cause the browser.old to attempt to load the new url.
       // When the single page app is loaded further down in this file,
-      // the correct url will be waiting in the browser's history for
+      // the correct url will be waiting in the browser.old's history for
       // the single page app to route accordingly.
       (function(l) {
         if (l.search[1] === '/' ) {
@@ -57,7 +57,7 @@
     <div id="root"></div>
     <!--
       This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+      If you open it directly in the browser.old, you will see an empty page.
 
       You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
