--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="싱크룸 한국 웹사이트"
+      property="og:url"
+      content="https://syncroomkr.github.io"
+    />
+    <meta
+      property="og:title"
+      content="Syncroom Korea"
+    />
+    <meta
+      property="og:type"
+      content="website"
+    />
+    <meta
+      property="og:image"
+      content="meta.png"
+    />
+    <meta
+      property="og:description"
+      content="싱크룸 한국 사이트"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
