--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     />
     <meta
       property="og:image"
-      content="meta.png"
+      content="%PUBLIC_URL%/meta.png"
     />
     <meta
       property="og:description"
