feat : add favicon

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,10 @@
       content="싱크룸 한국 사이트"
     />
     <title>SYNCROOM KOREA</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
 
         <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
