--- a/public/index.html
+++ b/public/index.html
@@ -61,14 +61,12 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
-      This HTML file is a template.
-      If you open it directly in the browser.old, you will see an empty page.
+      Syncroom Korea is a open source project.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+      for more info, visit:
+      https://github.com/syncroomkr/syncroomkr.github.io
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+      designed by 파나, developed by 늅늅이
     -->
   </body>
 </html>
