--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
-      Syncroom Korea is a open source project.
+      Syncroom Korea is an open source project.
 
       for more info, visit:
       https://github.com/syncroomkr/syncroomkr.github.io
