:art: Format whole project

--- a/index.html
+++ b/index.html
@@ -1,36 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      property="og:url"
-      content="https://syncroom.kr"
-    />
-    <meta
-      property="og:title"
-      content="Syncroom Korea"
-    />
-    <meta
-      property="og:type"
-      content="website"
-    />
-    <meta
-      property="og:image"
-      content="/meta.png"
-    />
-    <meta
-      property="og:description"
-      content="싱크룸 한국 사이트"
-    />
+    <meta property="og:url" content="https://syncroom.kr" />
+    <meta property="og:title" content="Syncroom Korea" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/meta.png" />
+    <meta property="og:description" content="싱크룸 한국 사이트" />
     <title>SYNCROOM KOREA</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-
-
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
